Add Login simulation in LoginActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
     <string name="button_login">Login</string>
+
+    <string name="success_login">Login success</string>
+    <string name="error_email">Email cannot be empty</string>
+    <string name="error_password">Password cannot be empty</string>
 </resources>
